services/datalake/spark/spark-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spark-debug-pod
  namespace: spark
spec:
  containers:
  - name: spark-debug-container
    image: bitnami/spark:latest
    command: ["sleep"]
    args: ["infinity"]
