services/datalake/spark/spark-driver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spark-driver
  namespace: spark
spec:
  containers:
  - name: spark-driver
    image: bitnami/spark:latest
    command: ["/bin/bash", "-c", "sleep infinity"]
