services/datalake/spark/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-master
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      component: spark-master
  template:
    metadata:
      labels:
        component: spark-master
    spec:
      containers:
      - name: spark-master
        image: bitnami/spark:latest
        ports:
        - containerPort: 7077
        - containerPort: 8085
        command: ["/bin/bash", "-c", "/opt/bitnami/scripts/spark/run.sh"]
        volumeMounts:
        - name: spark-config-volume
          mountPath: /opt/bitnami/spark/conf
      volumes:
      - name: spark-config-volume
        configMap:
          name: spark-config
