services/datalake/spark/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
  namespace: spark
spec:
  replicas: 3
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
      - name: spark-worker
        image: bitnami/spark:latest
        ports:
        - containerPort: 8086
        command: ["/bin/bash", "-c", "/opt/bitnami/scripts/spark/run.sh"]
        volumeMounts:
        - name: spark-config-volume
          mountPath: /opt/bitnami/spark/conf
      volumes:
      - name: spark-config-volume
        configMap:
          name: spark-config
