services/datalake/spark/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master-service
  namespace: spark
spec:
  ports:
  - name: webui
    port: 8085
    targetPort: 8085
  - name: spark
    port: 7077
    targetPort: 7077
  selector:
    component: spark-master
  type: ClusterIP
