services/datalake/spark/spark-worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-worker-service
  namespace: spark
spec:
  ports:
  - name: webui
    port: 8086
    targetPort: 8086
  selector:
    component: spark-worker
  type: ClusterIP
