services/datalake/spark/spark-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  namespace: spark
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kd.itversity.com
    http:
      paths:
      - path: /spark(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: spark-ui
            port:
              number: 8080
  tls:
  - hosts:
    - kd.itversity.com
    secretName: itversity-tls
